refactor code and add Exceptions to ExceptionHandler